--- a/index.html
+++ b/index.html
@@ -454,6 +454,113 @@
     	</div>
     </div><!-- ho we work -->
 
+    <div class="why_we">
+    	<div class="container">
+    		<h2>ПОЧЕМУ КЛИЕНТЫ ДОВОЛЬНЫ НАШЕЙ <br> РАБОТОЙ И РЕКОМЕНДУЮТ НАС ПАРТНЕРАМ</h2>
+    		<div class="why_we-container clearfix">
+    			<div class="left-block clearfix">
+                    <div class="why_we-block clearfix">
+        				<div class="why_we-desc">
+        					<header>прямые поставки</header>
+        					<p>Налаженные прямы связи с производителями. Большая часть продуктов всегда в наличии на нашем складе</p>
+        				</div>
+        				<div class="why_we-bg">
+        					<div class="table-block">
+        						<img src="images/work-1.png" alt="">
+        					</div>
+        				</div>
+                    </div>
+                    <div class="why_we-block clearfix">
+                        <div class="why_we-desc">
+                            <header>широкий ассортимент</header>
+                            <p>Мы предлагаем широчайший ассортимент во всех категориях.</p>
+                        </div>
+                        <div class="why_we-bg">
+                            <div class="table-block">
+                                <img src="images/work-2.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="why_we-block clearfix">
+                        <div class="why_we-desc">
+                            <header>доставка до вашего склада</header>
+                            <p>Быстрая и надежная доставка во все регионы Росси. Вы можете быть уверенны что товар придет вовремя.</p>
+                        </div>
+                        <div class="why_we-bg">
+                            <div class="table-block">
+                                <img src="images/work-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="why_we-block clearfix">
+                        <div class="why_we-desc">
+                            <header>с нами легко</header>
+                            <p>Мы не просто выслушаем и выставим счет, а порекомендуем лучшее и наиболее выгодное для вас предложение.</p>
+                        </div>
+                        <div class="why_we-bg">
+                            <div class="table-block">
+                                <img src="images/work-4.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+    			</div>
+    			<div class="right-block">
+                    <div class="why_we-block clearfix">
+                        <div class="why_we-bg">
+                            <div class="table-block">
+                                <img src="images/work-5.png" alt="">
+                            </div>
+                        </div>
+                        <div class="why_we-desc">
+                            <header>ТОЛЬКО КАЧЕСТВЕННАЯ ПРОДУКЦИЯ</header>
+                            <p>Мы не просто выслушаем и выставим счет, а порекомендуем лучшее и наиболее выгодное для вас предложение.</p>
+                        </div>
+                    </div>
+                    <div class="why_we-block clearfix">
+                        <div class="why_we-bg">
+                            <div class="table-block">
+                                <img src="images/work-6.png" alt="">
+                            </div>
+                        </div>
+                        <div class="why_we-desc">
+                            <header>ВЫГОДНАЯ ЦЕНА</header>
+                            <p>Покупая у нас вы получаете лучший товар на рынке, потому что мы работаем на пряму и вы не получаете товар, прошедший через 10 рук.</p>
+                        </div>
+                    </div>
+                    <div class="why_we-block clearfix">
+                        <div class="why_we-bg">
+                            <div class="table-block">
+                                <img src="images/work-7.png" alt="">
+                            </div>
+                        </div>
+                        <div class="why_we-desc">
+                            <header>ТОВАР ЗАСТРАХОВАН</header>
+                            <p>Мы страхуем весь товар и все расходы берём на себя.</p>
+                        </div>
+                    </div>
+                </div>
+    		</div>
+    	</div>
+    </div><!-- why we -->
+
+    <div class="warranty">
+        <div class="container">
+            <h2>гарантии</h2>
+            <div class="war-container">
+                <div class="war-block clearfix">
+                    <div class="war-img">
+                        <img src="images/war-1.jpg" alt="">
+                    </div>
+                    <div class="war-desc">
+                        <header>Доставка</header>
+                        <p>Гарантируем Вам сохранение продукции на протяжении всего пути.  Доставка рефрежиратором с поддержанием постоянной температуры от -3 до -18 С.</p>
+                        <a href="#" class="link-btn">узнать подробнее</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div><!-- warranty -->
+
 
 
 
