--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<link rel="stylesheet" href="css/main.less">
 	<link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/hover.css">
+    <link rel="stylesheet" href="css/set2.css">
+    <link rel="stylesheet" href="css/animate.css">
 	<script src="js/less.min.js"></script>
 	<script src="js/modernizr-2.8.3.min.js"></script>	
 </head>
@@ -92,7 +94,7 @@
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш телефон</p>
-    						<input type="text">
+    						<input type="text" class="tel-input">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш город</p>
@@ -114,35 +116,65 @@
     		<div class="work-container clearfix">
     			<div class="work-block">
     				<div class="border-block"></div>
-    				<div class="work-img refiners"></div>
+    				<div class="work-img">
+                        <div class="grid">
+                            <figure class="effect-julia">
+                                <img src="images/refiners.png" alt="img21"/>         
+                            </figure>
+                        </div>            
+                    </div>
     				<div class="work-title">
     					Переработчики
     				</div>
     			</div>
     			<div class="work-block">
     				<div class="border-block"></div>
-    				<div class="work-img broker"></div>
+    				<div class="work-img">
+                        <div class="grid">
+                            <figure class="effect-julia">
+                                <img src="images/broker.png" alt="img21"/>         
+                            </figure>
+                        </div>           
+                    </div>
     				<div class="work-title">
     					посредники
     				</div>
     			</div>
     			<div class="work-block">
     				<div class="border-block"></div>
-    				<div class="work-img set"></div>
+    				<div class="work-img">
+                    <div class="grid">
+                            <figure class="effect-julia">
+                                <img src="images/set.png" alt="img21"/>         
+                            </figure>
+                        </div>          
+                    </div>
     				<div class="work-title">
     					торговые сети
     				</div>
     			</div>
     			<div class="work-block">
     				<div class="border-block"></div>
-    				<div class="work-img bar"></div>
+    				<div class="work-img">
+                        <div class="grid">
+                            <figure class="effect-julia">
+                                <img src="images/bar.png" alt="img21"/>         
+                            </figure>
+                        </div>            
+                    </div>
     				<div class="work-title">
     					суши бары
     				</div>
     			</div>
     			<div class="work-block">
     				<div class="border-block"></div>
-    				<div class="work-img wholesalers"></div>
+    				<div class="work-img">
+                        <div class="grid">
+                            <figure class="effect-julia">
+                                <img src="images/Wholesalers.png" alt="img21"/>         
+                            </figure>
+                        </div>            
+                    </div>
     				<div class="work-title">
     					оптовики
     				</div>
@@ -229,7 +261,7 @@
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш телефон</p>
-    						<input type="text">
+    						<input type="text" class="tel-input">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш город</p>
@@ -460,7 +492,7 @@
     		<h2>ПОЧЕМУ КЛИЕНТЫ ДОВОЛЬНЫ НАШЕЙ <br> РАБОТОЙ И РЕКОМЕНДУЮТ НАС ПАРТНЕРАМ</h2>
     		<div class="why_we-container clearfix">
     			<div class="left-block clearfix">
-                    <div class="why_we-block clearfix">
+                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s">
         				<div class="why_we-desc">
         					<header>прямые поставки</header>
         					<p>Налаженные прямы связи с производителями. Большая часть продуктов всегда в наличии на нашем складе</p>
@@ -471,7 +503,7 @@
         					</div>
         				</div>
                     </div>
-                    <div class="why_we-block clearfix">
+                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-offset="150" data-wow-delay="0.5s">
                         <div class="why_we-desc">
                             <header>широкий ассортимент</header>
                             <p>Мы предлагаем широчайший ассортимент во всех категориях.</p>
@@ -482,7 +514,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="why_we-block clearfix">
+                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-offset="350" data-wow-delay="0.5s">
                         <div class="why_we-desc">
                             <header>доставка до вашего склада</header>
                             <p>Быстрая и надежная доставка во все регионы Росси. Вы можете быть уверенны что товар придет вовремя.</p>
@@ -493,7 +525,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="why_we-block clearfix">
+                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-offset="400" data-wow-delay="0.2s">
                         <div class="why_we-desc">
                             <header>с нами легко</header>
                             <p>Мы не просто выслушаем и выставим счет, а порекомендуем лучшее и наиболее выгодное для вас предложение.</p>
@@ -506,7 +538,7 @@
                     </div>
     			</div>
     			<div class="right-block">
-                    <div class="why_we-block clearfix">
+                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-offset="100" data-wow-delay="0.5s">
                         <div class="why_we-bg">
                             <div class="table-block">
                                 <img src="images/work-5.png" alt="">
@@ -517,7 +549,7 @@
                             <p>Мы не просто выслушаем и выставим счет, а порекомендуем лучшее и наиболее выгодное для вас предложение.</p>
                         </div>
                     </div>
-                    <div class="why_we-block clearfix">
+                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-offset="250" data-wow-delay="0.5s">
                         <div class="why_we-bg">
                             <div class="table-block">
                                 <img src="images/work-6.png" alt="">
@@ -528,7 +560,7 @@
                             <p>Покупая у нас вы получаете лучший товар на рынке, потому что мы работаем на пряму и вы не получаете товар, прошедший через 10 рук.</p>
                         </div>
                     </div>
-                    <div class="why_we-block clearfix">
+                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-offset="400" data-wow-delay="0.5s">
                         <div class="why_we-bg">
                             <div class="table-block">
                                 <img src="images/work-7.png" alt="">
@@ -613,7 +645,7 @@
                         </div>
                         <div class="input-block">
                             <p>Введите Ваш телефон</p>
-                            <input type="text">
+                            <input type="text" class="tel-input">
                         </div>
                         <div class="input-block">
                             <p>Введите Ваш город</p>
@@ -652,6 +684,8 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="js/jquery.nivo.slider.pack.js"></script>
+<script src="js/jquery.maskedinput.js"></script>
+<script src="js/wow.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
