--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	<nav class="nav">
 		<div class="container">
 			<ul class="clearfix">
-				<li><a href="#top-block" class="active">главная</a></li>
-				<li><a href="#work_with_us">с нами работают</a></li>
-				<li><a href="#stock">ассортимент</a></li>
-				<li><a href="#how_we_work">этапы работы</a></li>
-				<li><a href="#why_we">преимущества</a></li>
-				<li><a href="#warranty">гарантии</a></li>
-				<li><a href="#maps-block">контакты</a></li>
+				<li><a href="" class="active" data-target="top-block">главная</a></li>
+				<li><a href="" data-target="work_with_us">с нами работают</a></li>
+				<li><a href="" data-target="stock">ассортимент</a></li>
+				<li><a href="" data-target="how_we_work">этапы работы</a></li>
+				<li><a href="" data-target="why_we">преимущества</a></li>
+				<li><a href="" data-target="warranty">гарантии</a></li>
+				<li><a href="" data-target="maps-block">контакты</a></li>
 			</ul>
 		</div>
 	</nav><!-- navigation -->
@@ -413,7 +413,7 @@
     		<h2>Как мы работаем</h2>
     		<div class="work-container clearfix">
     			<div class="work-block">
-    				<div class="work-table">
+    				<div class="work-table active">
     					<div class="table-block">
     						<img src="images/phone.png" alt="">
     					</div>
