--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     			<div class="case-img"></div>		
     		</div>
     		<div class="right-block">
-    			<form>
+    			<form class="main-form">
     				<fieldset>
     					<h3>Заполните форму</h3>
     					<div class="input-block">
@@ -503,7 +503,7 @@
         					</div>
         				</div>
                     </div>
-                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-offset="150" data-wow-delay="0.5s">
+                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-delay="0.4s">
                         <div class="why_we-desc">
                             <header>широкий ассортимент</header>
                             <p>Мы предлагаем широчайший ассортимент во всех категориях.</p>
@@ -514,7 +514,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-offset="350" data-wow-delay="0.5s">
+                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-delay="0.8s">
                         <div class="why_we-desc">
                             <header>доставка до вашего склада</header>
                             <p>Быстрая и надежная доставка во все регионы Росси. Вы можете быть уверенны что товар придет вовремя.</p>
@@ -525,7 +525,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-offset="400" data-wow-delay="0.2s">
+                    <div class="why_we-block wow slideInLeft clearfix" data-wow-duration="2s" data-wow-delay="1.2s">
                         <div class="why_we-desc">
                             <header>с нами легко</header>
                             <p>Мы не просто выслушаем и выставим счет, а порекомендуем лучшее и наиболее выгодное для вас предложение.</p>
@@ -538,7 +538,7 @@
                     </div>
     			</div>
     			<div class="right-block">
-                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-offset="100" data-wow-delay="0.5s">
+                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-delay="0.2s">
                         <div class="why_we-bg">
                             <div class="table-block">
                                 <img src="images/work-5.png" alt="">
@@ -549,7 +549,7 @@
                             <p>Мы не просто выслушаем и выставим счет, а порекомендуем лучшее и наиболее выгодное для вас предложение.</p>
                         </div>
                     </div>
-                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-offset="250" data-wow-delay="0.5s">
+                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-delay="0.6s">
                         <div class="why_we-bg">
                             <div class="table-block">
                                 <img src="images/work-6.png" alt="">
@@ -560,7 +560,7 @@
                             <p>Покупая у нас вы получаете лучший товар на рынке, потому что мы работаем на пряму и вы не получаете товар, прошедший через 10 рук.</p>
                         </div>
                     </div>
-                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-offset="400" data-wow-delay="0.5s">
+                    <div class="why_we-block wow slideInRight clearfix" data-wow-duration="2s" data-wow-delay="1s">
                         <div class="why_we-bg">
                             <div class="table-block">
                                 <img src="images/work-7.png" alt="">
