add other files

--- a/index.html
+++ b/index.html
@@ -679,7 +679,68 @@
         </div>
     </div><!-- bottom block -->
 
+<div class="form-mask"></div>
+<div class="modal get-price clearfix">
+    <div class="closed"></div>
+    <div class="left-block">
+        <div class="pen"></div>
+    </div>
+    <div class="right-block">
+        <form class="main-form">
+            <fieldset>
+                <h3>Заполните форму</h3>
+                <div class="input-block">
+                    <p>Введите Ваше имя</p>
+                    <input type="text">
+                </div>
+                <div class="input-block">
+                    <p>Введите Ваш e-mail</p>
+                    <input type="text">
+                </div>
+                <div class="input-block">
+                    <p>Введите Ваш телефон</p>
+                    <input type="text" class="tel-input">
+                </div>
+                <div class="input-block">
+                    <p>Введите Ваш город</p>
+                    <input type="text">
+                </div>
+                <div class="input-block">
+                    <input type="submit" value="получить прайс" class="link-btn">
+                </div>
+                <div class="privacy">ГАРАНТИРУЕМ КОНФИДЕНЦИАЛЬНОСТЬ ВАШИХ ДАННЫХ</div>
+            </fieldset>
+        </form>
+    </div>
+</div>
 
+<div class="modal get-call clearfix">
+    <div class="closed"></div>
+    <div class="left-block">
+        <div class="iphone"></div>
+    </div>
+    <div class="right-block">
+        <form class="main-form">
+            <fieldset>
+                <h3>ВВЕДИТЕ СВОЕ ИМЯ И ТЕЛЕФОН. НАШ СПЕЦИАЛИСТ СВЯЖЕТСЯ С ВАМИ В БЛИЖАЙШЕЕ ВРЕМЯ</h3>
+                <div class="input-block">
+                    <p>Введите Ваше имя</p>
+                    <input type="text">
+                </div>
+                <div class="input-block tel-block clearfix">
+                    <p>Введите Ваш телефон</p>
+                    <input type="text" value="+7">
+                    <input type="text">
+                    <input type="text">
+                </div>
+                <div class="input-block">
+                    <input type="submit" value="Заказать звонок" class="link-btn">
+                </div>
+                <div class="privacy">ГАРАНТИРУЕМ КОНФИДЕНЦИАЛЬНОСТЬ ВАШИХ ДАННЫХ</div>
+            </fieldset>
+        </form>
+    </div>
+</div>
 
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
