add other files

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<div class="right-block clearfix">
 				<p>8 (911) 220-02-22</p>
 				<div class="clear"></div>
-				<a href="#" class="link-btn get-call pulse-grow">Заказать звонок</a>
+				<a class="link-btn get-call-link pulse-grow">Заказать звонок</a>
 			</div>
 		</div>
 	</div><!-- top block -->
@@ -67,7 +67,7 @@
         		Доставка рыбы от 10 тонн <br> по всей России за наш счет
         	</header>
         	<div>Ветсправки, страхование груза, фото перед отправкой.</div>
-        	<a href="#" class="link-btn">Получить прайс</a>
+        	<a class="link-btn get-price-link">Получить прайс</a>
         </div>
         
     </div><!-- slider -->
@@ -86,15 +86,15 @@
     					<h3>Заполните форму</h3>
     					<div class="input-block">
     						<p>Введите Ваше имя</p>
-    						<input type="text">
+    						<input type="text" placeholder="Иван Иванов">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш e-mail</p>
-    						<input type="text">
+    						<input type="text" placeholder="ivanov@mail.ru">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш телефон</p>
-    						<input type="text" class="tel-input">
+    						<input type="text" class="tel-input" placeholder="+7 495 555 55">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш город</p>
@@ -180,7 +180,7 @@
     				</div>
     			</div>
     		</div>
-    		<a href="#" class="link-btn">Получить прайс</a>
+    		<a class="link-btn get-price-link">Получить прайс</a>
     	</div>
     </div><!-- work with us -->
 
@@ -235,7 +235,7 @@
     				</div>
     			</div>
     		</div>
-    		<a href="#" class="link-btn">Получить прайс</a>
+    		<a class="link-btn get-price-link">Получить прайс</a>
     	</div>
     </div><!-- conditions -->
 
@@ -253,15 +253,15 @@
     					<h3>Заполните форму</h3>
     					<div class="input-block">
     						<p>Введите Ваше имя</p>
-    						<input type="text">
+    						<input type="text" placeholder="Иван Иванов">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш e-mail</p>
-    						<input type="text">
+    						<input type="text" placeholder="ivanov@mail.ru">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш телефон</p>
-    						<input type="text" class="tel-input">
+    						<input type="text" class="tel-input" placeholder="+7 495 555 55">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш город</p>
@@ -365,7 +365,7 @@
     				<div>
     					Благодаря широкому ассортименту вы выберете именно то, что нужно.
     				</div>
-    				<a href="#" class="link-btn">Получить прайс</a>
+    				<a class="link-btn get-price-link">Получить прайс</a>
     			</div>
     		</div>
     	</div>
@@ -404,7 +404,7 @@
     				<p>китай</p>
     			</div>
     		</div>
-    		<a href="#" class="link-btn">Получить прайс</a>
+    		<a class="link-btn get-price-link">Получить прайс</a>
     	</div>
     </div><!-- countries -->
 
@@ -637,15 +637,15 @@
                         <h3>Заполните форму</h3>
                         <div class="input-block">
                             <p>Введите Ваше имя</p>
-                            <input type="text">
+                            <input type="text" placeholder="Иван Иванов">
                         </div>
                         <div class="input-block">
                             <p>Введите Ваш e-mail</p>
-                            <input type="text">
+                            <input type="text" placeholder="ivanov@mail.ru">
                         </div>
                         <div class="input-block">
                             <p>Введите Ваш телефон</p>
-                            <input type="text" class="tel-input">
+                            <input type="text" class="tel-input" placeholder="+7 495 555 55">
                         </div>
                         <div class="input-block">
                             <p>Введите Ваш город</p>
@@ -674,7 +674,7 @@
             <div class="right-block clearfix">
                 <p>8 (911) 220-02-22</p>
                 <div class="clear"></div>
-                <a href="#" class="link-btn get-call">Заказать звонок</a>
+                <a class="link-btn get-call-link">Заказать звонок</a>
             </div>
         </div>
     </div><!-- bottom block -->
@@ -691,15 +691,15 @@
                 <h3>Заполните форму</h3>
                 <div class="input-block">
                     <p>Введите Ваше имя</p>
-                    <input type="text">
+                    <input type="text" placeholder="Иван Иванов">
                 </div>
                 <div class="input-block">
                     <p>Введите Ваш e-mail</p>
-                    <input type="text">
+                    <input type="text" placeholder="ivanov@mail.ru">
                 </div>
                 <div class="input-block">
                     <p>Введите Ваш телефон</p>
-                    <input type="text" class="tel-input">
+                    <input type="text" class="tel-input" placeholder="+7 495 555 55">
                 </div>
                 <div class="input-block">
                     <p>Введите Ваш город</p>
@@ -725,13 +725,14 @@
                 <h3>ВВЕДИТЕ СВОЕ ИМЯ И ТЕЛЕФОН. НАШ СПЕЦИАЛИСТ СВЯЖЕТСЯ С ВАМИ В БЛИЖАЙШЕЕ ВРЕМЯ</h3>
                 <div class="input-block">
                     <p>Введите Ваше имя</p>
-                    <input type="text">
+                    <input type="text" placeholder="Иван Иванов">
                 </div>
                 <div class="input-block tel-block clearfix">
                     <p>Введите Ваш телефон</p>
-                    <input type="text" value="+7">
-                    <input type="text">
-                    <input type="text">
+                    <div class="clear"></div>
+                    <input type="text" value="+7" class="in-1">
+                    <input type="text" placeholder="123" class="in-2">
+                    <input type="text" placeholder="4567890" class="in-3">
                 </div>
                 <div class="input-block">
                     <input type="submit" value="Заказать звонок" class="link-btn">
